fixed category title alignment

--- a/_assets/stylesheets/custom.sass
+++ b/_assets/stylesheets/custom.sass
@@ -1347,8 +1347,6 @@ input#mce-EMAIL
     min-width: initial
   .category-title
     margin-bottom: 1em
-    h1
-      text-align: right
   .section.posts > .container
     margin-top: 8rem
   .contact-info-email-container, .contact-info-office-container, .contact-info-meeting-container
